# learning_cmake

./: .gitignore  CMakeLists.txt  Makefile  config.h  config.h.in  delete_build_folder.sh  main.cpp  my_lib.cpp  my_lib.h  player.cpp
app/: CMakeLists.txt  main.cpp
cmake/: AddGitSubmodule.cmake  addgitsubmodules.cmake
config/: config.hpp.in
configured/: CMakeLists.txt  config.hpp.in
inc/: CMakeLists.txt  my_lib.h
src/: CMakeLists.txt  my_lib.cpp  player.cpp  player.h
